WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137054
[Yosemite] Button text doesn't go white while pushing the button, like it does for real buttons
https://bugs.webkit.org/show_bug.cgi?id=137054
Summary
[Yosemite] Button text doesn't go white while pushing the button, like it doe...
Dean Jackson
Reported
2014-09-23 19:59:32 PDT
[Yosemite] Button text doesn't go white while pushing the button, like it does for real buttons
Attachments
Patch
(4.08 KB, patch)
2014-09-23 20:07 PDT
,
Dean Jackson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2014-09-23 20:07:50 PDT
Created
attachment 238581
[details]
Patch
Dean Jackson
Comment 2
2014-09-24 03:33:38 PDT
rdar://problem/17559038
Dean Jackson
Comment 3
2014-09-24 12:57:39 PDT
Committed
r173928
: <
http://trac.webkit.org/changeset/173928
>
Darin Adler
Comment 4
2014-09-25 22:23:37 PDT
Comment on
attachment 238581
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=238581&action=review
> Source/WebCore/rendering/RenderThemeMac.mm:523 > + case CSSValueActivebuttontext: > +#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 101000 > + color = 0xC0FFFFFF; > +#endif > + break;
Don’t we want to set the color to something on pre-101000 systems instead of letting it call through to RenderTheme::systemColor? Maybe convertNSColorToColor([NSColor controlTextColor])? No FIXME about this being hardcoded? Same problem as with CSSValueInfobackground, I guess.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug